added support for the UsdGeomXformCommonAPI pivot

--- a/plugin/al/usdutils/AL/usd/utils/CMakeLists.txt
+++ b/plugin/al/usdutils/AL/usd/utils/CMakeLists.txt
@@ -95,9 +95,10 @@ set_target_properties(${USDUTILS_PYTHON_LIBRARY_NAME}
     LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 )
 
-if(NOT SKIP_USDMAYA_TESTS)
-  add_subdirectory(tests)
-endif()
+#if(NOT SKIP_USDMAYA_TESTS)
+
+add_subdirectory(tests)
+#endif()
 
 
 ####################################################################################################
