updated pythonpath to point to python wrapper location

--- a/lib/usd/utils/tests/CMakeLists.txt
+++ b/lib/usd/utils/tests/CMakeLists.txt
@@ -55,7 +55,7 @@ add_test(
 
 set_tests_properties(${USDUTILS_PYTHON_TEST_NAME}
   PROPERTIES
-    ENVIRONMENT PYTHONPATH=${CMAKE_BINARY_DIR}/${INSTALL_DIR_SUFFIX}/usdutils:${CMAKE_BINARY_DIR}/src:$ENV{PYTHONPATH} 
+    ENVIRONMENT PYTHONPATH=${CMAKE_BINARY_DIR}/${INSTALL_DIR_SUFFIX}/usd/utils:${CMAKE_BINARY_DIR}/src:$ENV{PYTHONPATH} 
 )
 
 
