--- a/plugin/al/translators/tests/CMakeLists.txt
+++ b/plugin/al/translators/tests/CMakeLists.txt
@@ -15,9 +15,15 @@ set(mayaPluginPath
     "${CMAKE_INSTALL_PREFIX}/plugin/al/plugin"
 )
 
+set(pxr_pluginpath_name 
+    "${CMAKE_INSTALL_PREFIX}/plugin/al/lib/usd"
+    "$ENV{PXR_PLUGINPATH_NAME}" #Needed by AL
+)
+
 separate_argument_list(path)
 separate_argument_list(pythonPath)
 separate_argument_list(mayaPluginPath)
+separate_argument_list(pxr_pluginpath_name)
 
 add_test(
     NAME ${TEST_NAME}
@@ -34,12 +40,18 @@ set_property(TEST ${TEST_NAME} APPEND PROPERTY ENVIRONMENT
     "PYTHONPATH=${pythonPath}"
     "PATH=${path}"
     "MAYA_PLUG_IN_PATH=${mayaPluginPath}"
-    "PXR_PLUGINPATH_NAME=${CMAKE_INSTALL_PREFIX}/plugin/al/lib/usd"
+    "PXR_PLUGINPATH_NAME=${pxr_pluginpath_name}"
     "MAYA_NO_STANDALONE_ATEXIT=1"
 )
 
 if(IS_LINUX)
+    set(ldLibraryPath
+        "${PXR_USD_LOCATION}/lib"
+        "${CMAKE_INSTALL_PREFIX}/plugin/al/lib"
+        "$ENV{LD_LIBRARY_PATH}"    #needed by AL
+    )
+    separate_argument_list(ldLibraryPath)
     set_property(TEST ${TEST_NAME} APPEND PROPERTY ENVIRONMENT 
-        "LD_LIBRARY_PATH=${CMAKE_INSTALL_PREFIX}/plugin/al/lib:${PXR_USD_LOCATION}/lib"
+        "LD_LIBRARY_PATH=${ldLibraryPath}"
     )
 endif()
