tweaks to get tests working on both AL/rez and OSS platforms

--- a/plugin/al/plugin/AL_USDMayaPlugin/CMakeLists.txt
+++ b/plugin/al/plugin/AL_USDMayaPlugin/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(
 target_compile_definitions(${PXR_PACKAGE}
     PRIVATE
         AL_USDMAYA_PLUGIN_EXPORT
+        $<$<BOOL:${UFE_FOUND}>:WANT_UFE_BUILD>
 )
 
 target_link_libraries(${PXR_PACKAGE}
