--- a/test/lib/usd/utils/CMakeLists.txt
+++ b/test/lib/usd/utils/CMakeLists.txt
@@ -37,11 +37,12 @@ mayaUsd_add_test(${TARGET_NAME}
 )
 
 mayaUsd_add_test(${PYTHON_TARGET_NAME}
-    PYTHON_COMMAND "python -m unittest discover -s ${CMAKE_CURRENT_SOURCE_DIR}"
+    PYTHON_MODULE ${PYTHON_TARGET_NAME}
     ENV
         "MAYA_PLUG_IN_PATH=${MAYAUTILS_TEST_MAYAPLUGIN_INSTALL_PATH}"
         "PXR_PLUGINPATH_NAME=${ADDITIONAL_PXR_PLUGINPATH_NAME}"
         "PYTHONPATH=${CMAKE_BINARY_DIR}/${INSTALL_DIR_SUFFIX}/lib/usd/utils:${CMAKE_BINARY_DIR}/src:$ENV{PYTHONPATH}"
+        "UFE_PREVIEW_VERSION_NUM=${UFE_PREVIEW_VERSION_NUM}"
 )
 
 if (TARGET all_tests)
