just making sure tests are being run

--- a/test/lib/usd/utils/CMakeLists.txt
+++ b/test/lib/usd/utils/CMakeLists.txt
@@ -1,5 +1,4 @@
-set(TARGET_NAME UsdUtils)
-set(PYTHON_TARGET_NAME UsdUtilsTest)
+set(TARGET_NAME DiffCore)
 
 add_executable(${TARGET_NAME})
 
@@ -10,7 +9,6 @@ target_sources(${TARGET_NAME}
     PRIVATE
         main.cpp
         test_DiffCore.cpp
-        test_MayaTransformAPI.cpp
 )
 
 # -----------------------------------------------------------------------------
@@ -36,12 +34,47 @@ mayaUsd_add_test(${TARGET_NAME}
     COMMAND $<TARGET_FILE:${TARGET_NAME}>
 )
 
-list(APPEND test_script_files
-    test_MayaTransformAPI.py
+set(TARGET_NAME MayaTransformAPI)
+
+add_executable(${TARGET_NAME})
+
+# -----------------------------------------------------------------------------
+# sources
+# -----------------------------------------------------------------------------
+target_sources(${TARGET_NAME}
+    PRIVATE
+        main.cpp
+        test_MayaTransformAPI.cpp
+)
+
+# -----------------------------------------------------------------------------
+# link libraries
+# -----------------------------------------------------------------------------
+target_link_libraries(${TARGET_NAME}
+    PRIVATE 
+        GTest::GTest
+        mayaUsdUtils
+)
+
+# -----------------------------------------------------------------------------
+# environment variables
+# -----------------------------------------------------------------------------
+add_definitions(
+  -DAL_EXTRAS_TEST_DATA="${CMAKE_CURRENT_SOURCE_DIR}/data"
 )
 
 mayaUsd_copyDirectory(${TARGET_NAME} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}
                              DIRECTORY data)
+# -----------------------------------------------------------------------------
+# unit tests
+# -----------------------------------------------------------------------------
+mayaUsd_add_test(${TARGET_NAME}
+    COMMAND $<TARGET_FILE:${TARGET_NAME}>
+)
+
+list(APPEND test_script_files
+    test_MayaTransformAPI.py
+)
                              
 foreach(script ${test_script_files})
     mayaUsd_get_unittest_target(target ${script})
