fixed up CMake build to include mayaUsd_add_test function

--- a/AL_USDTransaction/CMakeLists.txt
+++ b/AL_USDTransaction/CMakeLists.txt
@@ -27,6 +27,8 @@ get_filename_component(MAYA_USD_LOCAL_REPO_DIR ${MAYA_USD_WIP_REPO_DIR_REL} ABSO
 include(maya-usd-subproject)
 
 include(${MAYA_USD_SOURCE_DIR}/cmake/utils.cmake)
+include(${MAYA_USD_SOURCE_DIR}/cmake/googletest.cmake)
+include(${MAYA_USD_SOURCE_DIR}/cmake/test.cmake)
 
 ####################################################################################################
 # General
