--- a/AL_USDUtils/CMakeLists.txt
+++ b/AL_USDUtils/CMakeLists.txt
@@ -27,6 +27,8 @@ get_filename_component(MAYA_USD_LOCAL_REPO_DIR ${MAYA_USD_WIP_REPO_DIR_REL} ABSO
 include(maya-usd-subproject)
 
 include(${MAYA_USD_SOURCE_DIR}/cmake/utils.cmake)
+include(${MAYA_USD_SOURCE_DIR}/cmake/googletest.cmake)
+include(${MAYA_USD_SOURCE_DIR}/cmake/test.cmake)
 
 ####################################################################################################
 # General
@@ -34,11 +36,11 @@ include(${MAYA_USD_SOURCE_DIR}/cmake/utils.cmake)
 set(USDUTILS_INCLUDE_LOCATION ${MAYA_USD_SOURCE_DIR}/lib/usd/utils)
 
 add_subdirectory(${MAYA_USD_SOURCE_DIR}/lib/usd/utils ${MAYA_USD_BUILD_DIR}/usdutils)
+add_subdirectory(${MAYA_USD_SOURCE_DIR}/test/lib/usd/utils ${MAYA_USD_BUILD_DIR}/test)
 
 add_custom_target(all_tests
   ${CMAKE_CTEST_COMMAND} --output-on-failure
 )
-
 
 ####################################################################################################
 # Install
