--- a/test/lib/usd/utils/CMakeLists.txt
+++ b/test/lib/usd/utils/CMakeLists.txt
@@ -89,5 +89,5 @@ add_test(
 )
 set_tests_properties(${USDUTILS_PYTHON_TEST_NAME}
   PROPERTIES
-    ENVIRONMENT PYTHONPATH=${CMAKE_BINARY_DIR}/${INSTALL_DIR_SUFFIX}/usdutils/mayaUsdUtils:$ENV{PYTHONPATH} 
+    ENVIRONMENT PYTHONPATH=${CMAKE_BINARY_DIR}/${INSTALL_DIR_SUFFIX}/usdutils:${CMAKE_BINARY_DIR}/${INSTALL_DIR_SUFFIX}/lib/usd/utils:$ENV{PYTHONPATH} 
 )
