--- a/AL_USDUtils/CMakeLists.txt
+++ b/AL_USDUtils/CMakeLists.txt
@@ -26,6 +26,7 @@ get_filename_component(MAYA_USD_LOCAL_REPO_DIR ${MAYA_USD_WIP_REPO_DIR_REL} ABSO
 
 include(maya-usd-subproject)
 
+include(${MAYA_USD_SOURCE_DIR}/cmake/compiler_config.cmake)
 include(${MAYA_USD_SOURCE_DIR}/cmake/utils.cmake)
 
 
