added transform cache, and absolute transform methods

--- a/lib/usd/utils/CMakeLists.txt
+++ b/lib/usd/utils/CMakeLists.txt
@@ -11,6 +11,7 @@ set(MAYAUSDUTILS_PYTHON_LIBRARY_LOCATION ${CMAKE_INSTALL_PREFIX}/lib/python/${TA
 target_sources(${TARGET_NAME}
     PRIVATE
         TransformOpTools.cpp
+        TransformCache.cpp
         MayaTransformAPI.cpp
         DebugCodes.cpp
         DiffCore.cpp
@@ -64,6 +65,7 @@ set(headers
     ForwardDeclares.h
     MayaTransformAPI.h
     SIMD.h
+    TransformCache.h
     TransformOpTools.h
     util.h
 )
