seperated out the transform op processor into smaller modules. Fixed rotation-undo bug

--- a/lib/usd/utils/CMakeLists.txt
+++ b/lib/usd/utils/CMakeLists.txt
@@ -10,8 +10,10 @@ set(MAYAUSDUTILS_PYTHON_LIBRARY_LOCATION ${CMAKE_INSTALL_PREFIX}/lib/python/${TA
 # -----------------------------------------------------------------------------
 target_sources(${TARGET_NAME}
     PRIVATE
-        TransformOpTools.cpp
         TransformCache.cpp
+        TransformEvaluator.cpp
+        TransformManipulator.cpp
+        TransformManipulatorEx.cpp
         MayaTransformAPI.cpp
         DebugCodes.cpp
         DiffCore.cpp
@@ -66,7 +68,10 @@ set(headers
     MayaTransformAPI.h
     SIMD.h
     TransformCache.h
-    TransformOpTools.h
+    TransformEvaluator.h
+    TransformManipulator.h
+    TransformManipulatorEx.h
+    TransformMaths.h
     util.h
 )
 
