--- a/test/lib/usd/utils/CMakeLists.txt
+++ b/test/lib/usd/utils/CMakeLists.txt
@@ -39,7 +39,7 @@ mayaUsd_add_test(${TARGET_NAME}
     COMMAND $<TARGET_FILE:${TARGET_NAME}>
 )
 
-set(TARGET_NAME TransformOpTools)
+set(TARGET_NAME TransformEvaluator)
 
 add_executable(${TARGET_NAME})
 
@@ -53,7 +53,60 @@ target_include_directories(${TARGET_NAME}
 target_sources(${TARGET_NAME}
     PRIVATE
         main.cpp
-        test_TransformOpTools.cpp
+        test_TransformEvaluator.cpp
+)
+
+# -----------------------------------------------------------------------------
+# compiler configuration
+# -----------------------------------------------------------------------------
+mayaUsd_compile_config(${TARGET_NAME})
+
+# -----------------------------------------------------------------------------
+# link libraries
+# -----------------------------------------------------------------------------
+target_link_libraries(${TARGET_NAME}
+    PRIVATE 
+        GTest::GTest
+        mayaUsdUtils
+        tf
+        usd
+        ${MAYA_Foundation_LIBRARY}
+        ${Boost_PYTHON_LIBRARY}
+        ${python_LIBRARIES}
+)
+
+# -----------------------------------------------------------------------------
+# environment variables
+# -----------------------------------------------------------------------------
+add_definitions(
+  -DAL_EXTRAS_TEST_DATA="${CMAKE_CURRENT_SOURCE_DIR}/data"
+)
+
+# -----------------------------------------------------------------------------
+# unit tests
+# -----------------------------------------------------------------------------
+mayaUsd_add_test(${TARGET_NAME}
+    COMMAND $<TARGET_FILE:${TARGET_NAME}>
+)
+
+
+
+
+set(TARGET_NAME TransformManipulator)
+
+add_executable(${TARGET_NAME})
+
+target_include_directories(${TARGET_NAME} 
+    PUBLIC
+        ${MAYA_INCLUDE_DIRS}
+)
+# -----------------------------------------------------------------------------
+# sources
+# -----------------------------------------------------------------------------
+target_sources(${TARGET_NAME}
+    PRIVATE
+        main.cpp
+        test_TransformManipulator.cpp
 )
 
 # -----------------------------------------------------------------------------
